--- a/output.css
+++ b/output.css
@@ -1547,4 +1547,9 @@ img,
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
+
+  .md\:text-5xl{
+    font-size: 3rem;
+    line-height: 1;
+  }
 }
