--- a/input.css
+++ b/input.css
@@ -9,6 +9,9 @@
     overflow: hidden;
     transition: max-height 0.3s ease-out;
 }
+button:disabled {
+    cursor: not-allowed;
+}
 
 
 @layer components {
@@ -147,5 +150,25 @@
     }
     .requirements li span {
         @apply text-primary font-bold mr-3
+    }
+
+    /*PROGRAMS PAGE*/
+    .program {
+        @apply w-11/12 m-auto md:m-0 md:w-[400px] shadow-lg p-8 rounded-md hover:scale-105;
+    }
+    .program img {
+        @apply w-8 h-8;
+    }
+    .program div {
+        @apply rounded-full shadow-lg w-fit p-4
+    }
+    .program h3 {
+        @apply font-bold text-[#333] my-8 text-xl;
+    }
+    .program button {
+        @apply bg-primary px-4 py-2 text-white mt-3 rounded-md
+    }
+    .program button.inactive {
+        @apply bg-opacity-50
     }
 }
