--- a/output.css
+++ b/output.css
@@ -1007,6 +1007,73 @@ img,
   color: rgb(200 8 21 / var(--tw-text-opacity));
 }
 
+/*PROGRAMS PAGE*/
+
+.program{
+  margin: auto;
+  width: 91.666667%;
+  border-radius: 0.375rem;
+  padding: 2rem;
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.program:hover{
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+@media (min-width: 768px){
+  .program{
+    margin: 0px;
+    width: 400px;
+  }
+}
+
+.program img{
+  height: 2rem;
+  width: 2rem;
+}
+
+.program div{
+  width: -moz-fit-content;
+  width: fit-content;
+  border-radius: 9999px;
+  padding: 1rem;
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.program h3{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  font-weight: 700;
+  --tw-text-opacity: 1;
+  color: rgb(51 51 51 / var(--tw-text-opacity));
+}
+
+.program button{
+  margin-top: 0.75rem;
+  border-radius: 0.375rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(200 8 21 / var(--tw-bg-opacity));
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.program button.inactive{
+  --tw-bg-opacity: 0.5;
+}
+
 .absolute{
   position: absolute;
 }
@@ -1101,10 +1168,6 @@ img,
   height: 1.25rem;
 }
 
-.h-8{
-  height: 2rem;
-}
-
 .h-full{
   height: 100%;
 }
@@ -1117,6 +1180,14 @@ img,
   min-height: 400px;
 }
 
+.w-\[55px\]{
+  width: 55px;
+}
+
+.w-\[25px\]{
+  width: 25px;
+}
+
 .w-full{
   width: 100%;
 }
@@ -1125,41 +1196,9 @@ img,
   width: 1.25rem;
 }
 
-.w-3\/4{
-  width: 75%;
-}
-
-.w-11\/12{
-  width: 91.666667%;
-}
-
 .w-fit{
   width: -moz-fit-content;
   width: fit-content;
-}
-
-.w-8{
-  width: 2rem;
-}
-
-.w-\[100px\]{
-  width: 100px;
-}
-
-.w-\[50px\]{
-  width: 50px;
-}
-
-.w-\[20px\]{
-  width: 20px;
-}
-
-.w-\[25px\]{
-  width: 25px;
-}
-
-.w-\[55px\]{
-  width: 55px;
 }
 
 .max-w-sm{
@@ -1338,10 +1377,6 @@ img,
   padding: 0.5rem;
 }
 
-.p-8{
-  padding: 2rem;
-}
-
 .p-4{
   padding: 1rem;
 }
@@ -1376,11 +1411,6 @@ img,
   padding-right: 1rem;
 }
 
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
 .pt-6{
   padding-top: 1.5rem;
 }
@@ -1392,11 +1422,6 @@ img,
 .text-4xl{
   font-size: 2.25rem;
   line-height: 2.5rem;
-}
-
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
 }
 
 .text-lg{
@@ -1414,9 +1439,9 @@ img,
   line-height: 2rem;
 }
 
-.text-5xl{
-  font-size: 3rem;
-  line-height: 1;
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-semibold{
@@ -1454,11 +1479,6 @@ img,
   color: rgb(22 101 52 / var(--tw-text-opacity));
 }
 
-.text-\[\#333\]{
-  --tw-text-opacity: 1;
-  color: rgb(51 51 51 / var(--tw-text-opacity));
-}
-
 .text-\[\#555\]{
   --tw-text-opacity: 1;
   color: rgb(85 85 85 / var(--tw-text-opacity));
@@ -1466,12 +1486,6 @@ img,
 
 .underline{
   text-decoration-line: underline;
-}
-
-.shadow-lg{
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .transition-transform{
@@ -1490,10 +1504,8 @@ img,
   transition: max-height 0.3s ease-out;
 }
 
-.hover\:scale-105:hover{
-  --tw-scale-x: 1.05;
-  --tw-scale-y: 1.05;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+button:disabled {
+  cursor: not-allowed;
 }
 
 .hover\:bg-transparent:hover{
@@ -1501,16 +1513,12 @@ img,
 }
 
 @media (min-width: 768px){
-  .md\:m-0{
-    margin: 0px;
-  }
-
   .md\:hidden{
     display: none;
   }
 
-  .md\:w-\[400px\]{
-    width: 400px;
+  .md\:w-\[100px\]{
+    width: 100px;
   }
 
   .md\:w-3\/4{
@@ -1521,10 +1529,6 @@ img,
     width: 50%;
   }
 
-  .md\:w-\[100px\]{
-    width: 100px;
-  }
-
   .md\:skew-x-6{
     --tw-skew-x: 6deg;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1532,6 +1536,10 @@ img,
 
   .md\:flex-row{
     flex-direction: row;
+  }
+
+  .md\:gap-12{
+    gap: 3rem;
   }
 
   .md\:p-8{
