--- a/output.css
+++ b/output.css
@@ -635,6 +635,18 @@ img,
   }
 }
 
+.nav-link-btn{
+  margin-left: 1rem;
+  display: none;
+  padding: 0.25rem;
+}
+
+@media (min-width: 768px){
+  .nav-link-btn{
+    display: inline;
+  }
+}
+
 .nav-link svg:hover{
   fill: rgb(200 8 21 / 0.8);
 }
@@ -1136,6 +1148,14 @@ img,
   margin-bottom: 1.5rem;
 }
 
+.mt-10{
+  margin-top: 2.5rem;
+}
+
+.mt-4{
+  margin-top: 1rem;
+}
+
 .mb-4{
   margin-bottom: 1rem;
 }
@@ -1162,6 +1182,10 @@ img,
 
 .flex{
   display: flex;
+}
+
+.grid{
+  display: grid;
 }
 
 .h-5{
@@ -1201,6 +1225,10 @@ img,
   width: fit-content;
 }
 
+.max-w-7xl{
+  max-width: 80rem;
+}
+
 .max-w-sm{
   max-width: 24rem;
 }
@@ -1234,6 +1262,10 @@ img,
   list-style-type: disc;
 }
 
+.grid-cols-1{
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .flex-col{
   flex-direction: column;
 }
@@ -1262,12 +1294,20 @@ img,
   gap: 1rem;
 }
 
+.gap-10{
+  gap: 2.5rem;
+}
+
 .gap-y-10{
   row-gap: 2.5rem;
 }
 
 .rounded-full{
   border-radius: 9999px;
+}
+
+.rounded-lg{
+  border-radius: 0.5rem;
 }
 
 .rounded-md{
@@ -1318,6 +1358,16 @@ img,
 .bg-red-100{
   --tw-bg-opacity: 1;
   background-color: rgb(254 226 226 / var(--tw-bg-opacity));
+}
+
+.bg-gray-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-black\/75{
@@ -1401,14 +1451,19 @@ img,
   padding-bottom: 1rem;
 }
 
-.py-10{
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.py-10{
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }
 
 .pt-6{
@@ -1452,6 +1507,10 @@ img,
   font-weight: 700;
 }
 
+.font-extrabold{
+  font-weight: 800;
+}
+
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1467,6 +1526,21 @@ img,
 
 .text-black\/70{
   color: rgb(0 0 0 / 0.7);
+}
+
+.text-gray-900{
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.text-gray-800{
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
+}
+
+.text-gray-600{
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
 .text-red-500{
@@ -1486,6 +1560,12 @@ img,
 
 .underline{
   text-decoration-line: underline;
+}
+
+.shadow-md{
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .transition-transform{
@@ -1510,6 +1590,17 @@ button:disabled {
 
 .hover\:bg-transparent:hover{
   background-color: transparent;
+}
+
+@media (min-width: 640px){
+  .sm\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:px-6{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
 }
 
 @media (min-width: 768px){
@@ -1559,5 +1650,16 @@ button:disabled {
   .md\:text-5xl{
     font-size: 3rem;
     line-height: 1;
+  }
+}
+
+@media (min-width: 1024px){
+  .lg\:grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:px-8{
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 }
